# graphirm

./: .gitignore  AGENTS.md  CHANGELOG.md  CURRENT_STATUS.md  Cargo.toml  README.md  STRESS_TEST_FINAL_REPORT.txt  STRESS_TEST_SUMMARY.md  comprehensive_report.sh  escalation_report.json  final_report.sh  messages_sample.json  run_stress_tests_v2.sh  s1_metrics.json  s1_status.json  s1_status.txt  s2_metrics.json  s2_status.json  s2_status.txt  s3_metrics.json  s3_status.json  s3_status.txt  s4_metrics.json  s5_metrics.json  s6_metrics.json  styles.css
.cursor/rules/: 000-skills-first.mdc  graphirm-context-always.mdc  graphirm-project.mdc
.github/workflows/: ci.yml
.nodestradamus/: graph.msgpack  parse_cache.msgpack
config/: default.toml
crates/agent/: AGENTS.md  Cargo.toml
crates/agent/src/: compact.rs  config.rs  context.rs  coordinator.rs  delegate.rs  error.rs  escalation.rs  event.rs  hitl.rs  knowledge.rs  lib.rs  multi.rs  session.rs  workflow.rs
crates/agent/src/knowledge/: extraction.rs  injection.rs  label_explore.rs  local_extraction.rs  memory.rs  predict_spans.rs  schema_suggest.rs  segments.rs  validate_agreement.rs
crates/agent/tests/: knowledge_integration.rs  label_explore_integration.rs  local_extraction_integration.rs  multi_agent_integration.rs  test_escalation_integration.rs  test_segments_integration.rs  test_session_metadata.rs
crates/agent/tests/fixtures/: corpus_synthetic.jsonl
crates/graph/: AGENTS.md  Cargo.toml
crates/graph/src/: corpus.rs  edges.rs  error.rs  export.rs  lib.rs  nodes.rs  query.rs  store.rs  vector.rs
crates/graph/tests/: test_session_restore.rs
crates/llm/: AGENTS.md  Cargo.toml
crates/llm/src/: anthropic.rs  deepseek.rs  error.rs  factory.rs  fastembed_provider.rs  lib.rs  mistral_embed.rs  mock.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs  stream.rs  tool.rs
crates/llm/tests/: integration.rs
crates/server/: AGENTS.md  Cargo.toml
crates/server/examples/: analyze_request_log.rs
crates/server/src/: error.rs  lib.rs  middleware.rs  request_log.rs  routes.rs  sdk.rs  session.rs  sse.rs  state.rs  types.rs
crates/server/tests/: integration.rs  scenarios.rs  test_e2e_session_restore.rs  test_session_restore_api.rs
crates/tools/: AGENTS.md  Cargo.toml
crates/tools/src/: bash.rs  edit.rs  error.rs  executor.rs  find.rs  grep.rs  lib.rs  ls.rs  permissions.rs  read.rs  registry.rs  write.rs
crates/tools/tests/: integration.rs
crates/tui/: AGENTS.md  Cargo.toml
crates/tui/src/: app.rs  chat.rs  events.rs  graph.rs  input.rs  lib.rs  status.rs  types.rs  ui.rs
docs/: README.md  backlog.md  completion-log.md  usage-discovery-findings.md
docs/archive/plans/: 2026-03-03-phase-0-scaffold.md  2026-03-03-phase-1-graph-store.md  2026-03-03-phase-2-llm-provider.md  2026-03-03-phase-3-tool-system.md  2026-03-03-phase-4-agent-loop.md  2026-03-03-phase-5-multi-agent.md  2026-03-03-phase-6-context-engine.md  2026-03-03-phase-7-tui.md  2026-03-03-phase-8-http-server.md  2026-03-03-phase-9-knowledge-layer.md  2026-03-05-phase-10-usage-discovery.md  2026-03-05-phase-11-vscode-extension.md  2026-03-05-phase-12-landing-and-polish.md  2026-03-06-dag-timeline-layout-design.md  2026-03-06-dag-timeline-layout-implementation.md  README.md
docs/backlog/: phase-13-advanced-features.md
docs/features/: phase-13-planning.md  session-restoration.md
docs/guides/: embedding-setup.md  gliner2-setup.md
docs/plans/: 00-execution-strategy.md  2026-03-06-dag-timeline-layout-completion.md  2026-03-06-phase-12-task-5-agent-trace-export.md  2026-03-09-gliner2-onnx.md  2026-03-10-structured-llm-responses.md  2026-03-15-spoke-agents-compliance.md  2026-03-15-structured-segments-phase5-6.md
graphirm-eval/: AGENTS.md  Cargo.toml  README.md
graphirm-eval/src/: client.rs  harness.rs  main.rs  report.rs  task.rs
graphirm-eval/src/tasks/: adversarial.rs  coding.rs  graph.rs  knowledge.rs  memory.rs  mod.rs  segments.rs
graphirm-site/: CNAME  index.html  styles.css
graphirm-vscode/: .vscodeignore  LICENSE  esbuild.mjs  package-lock.json  package.json
graphirm-vscode/media/: chat.js  graph.js  index.html  main.js  sessions.js  styles.css
graphirm-vscode/src/: ApiClient.ts  GraphirmPanel.ts  SseSubscriber.ts  extension.ts  statusBar.ts
scripts/: collect_final_metrics.sh  corpus_from_server.sh  run_stress_tests.sh  run_stress_tests_fixed.sh  spans_to_annotations.py  stress_50_prompts.txt
src/: error.rs  main.rs
