[package]
name = "graphirm-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent loop, multi-agent orchestration, and context engine for Graphirm"

[dependencies]
graphirm-graph = { path = "../graph" }
graphirm-llm = { path = "../llm" }
graphirm-tools = { path = "../tools" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
