[package]
name = "graphirm-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent loop, multi-agent orchestration, and context engine for Graphirm"

[dependencies]
graphirm-graph = { path = "../graph" }
graphirm-llm = { path = "../llm" }
graphirm-tools = { path = "../tools" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.16"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
toml = "0.8"
futures = "0.3"
tempfile = "3"
