[package]
name = "graphirm-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent loop, multi-agent orchestration, and context engine for Graphirm"

[dependencies]
graphirm-graph = { path = "../graph" }
graphirm-llm = { path = "../llm" }
graphirm-tools = { path = "../tools" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros", "rt"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Pinned to RC until ort 2.0 stable ships. Revisit when stable is released.
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"], optional = true }
# Bumped from plan-specified 0.16 to 0.17 to match ort 2.0.0-rc.12 requirements.
ndarray = { version = "0.17", optional = true }
hf-hub = { version = "0.3", default-features = false, features = ["tokio", "online"], optional = true }
# Unicode features kept (default) — word-boundary regex uses \w which requires unicode support.
regex = { version = "1", optional = true }

[features]
# Enable the local ONNX extraction backend (GLiNER2). Requires glibc >= 2.38 for
# the prebuilt ONNX Runtime binary. Disabled by default; enable with:
#   cargo build --features local-extraction
local-extraction = ["dep:ort", "dep:tokenizers", "dep:ndarray", "dep:hf-hub", "dep:regex"]

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
toml = "0.8"
futures = "0.3"
tempfile = "3"
