[package]
name = "graphirm-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider abstraction for Graphirm"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio-stream = "0.1"
