[package]
name = "graphirm-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider abstraction layer for Graphirm"

[dependencies]
rig-core = "0.31"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[features]
default = []
local-embed = ["dep:fastembed"]

[dependencies.fastembed]
version = "5"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
