[package]
name = "graphirm-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in tools for Graphirm agent"

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["process", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
